ecell-3.1.108: 5-Feb-2010

 * Fixed model-editor to not create temporary files under the current directory.
   This change solves permission-related problems on Windows and boosts up
   the start-up speed as well.


ecell-3.1.108RC3: 27-Jan-2010

 * Fixed dmcompile so that it would choose the right compiler.

 * Fixed libltdl autoconf script in order to get it work with newer versions
   of libtool.

 * libtool_overrides.m4 that overrides several internal functions of the
   libtool autoconf script to support Fujitsu C++ compiler.


ecell-3.1.108RC2: 15-Jan-2010

 * Fixed ecell3-dmc so that it accepts -o (--output=) option so that users
   can specify extra object files to the command line as well.

 * Resuscitate ecell3-session-monitor which stopped working due to the
   migration to gtk.Builder.


ecell-3.1.108RC1: 13-Jan-2010

 * Refactored differential steppers so that they give accurate results on
   the step right after the (re)start.  A new virtual method
   DifferentialStepper::updateInternalState() was added to accomplish this,
   and therefore backwards binary compatibility was lost as for Steppers' DMs.

 * Unbundled ply as it's pretty obsolete.  Users must install it beforehand.

 * Switched to gtk.Builder from gtk.glade.XML.


ecell-3.1.107: 4-Jul-2009

 * Added new API functions, libecs::issueWarning() and
   libecs::setWarningHandler() that can be used to report a warning to the
   frontend from within a dynamic module.

 * Deprecated Stepper's "MaxStepInterval" property as it doesn't make much
   sense.

 * Added a new property "TolerableRejectedStepCount" to DifferentialStepper
   (i.e. ODEStepper and its siblings) that specifies the maximum torelable
   count of rejected steps.

 * Fixed a bug in ODEStepper that causes SIGABRT under the circumstances
   no processes are associated to the stepper. Noticed by Sachio Nohara.
   Thanks.

 * Patched libltdl so it would not be interfered by the newer versions of
   libtool.
