@@ -40,11 +40,9 @@ fi
 
 AC_SUBST([PREFIX])
 
-AC_ARG_ENABLE([gui], [
-  AC_HELP_STRING([--disable-gui],
-                 [build ecell without gui frontends.])
-  ], [],
-  [enable_gui=yes]
+AC_ARG_ENABLE([gui], [AC_HELP_STRING([--disable-gui],
+                      [build ecell without gui frontends.])],
+  [], [enable_gui=yes]
 )
 
 AC_MSG_CHECKING([whether to build GUI frontends])
@@ -55,6 +53,20 @@ else
 fi
 
 AM_CONDITIONAL([ENABLE_GUI], [test "$enable_gui" = "yes"])
+
+AC_ARG_ENABLE([pyecell], [AC_HELP_STRING([--disable-pyecell],
+                          [build ecell without Python binding.])],
+  [], [enable_pyecell=yes]
+)
+
+AC_MSG_CHECKING([whether to build Python binding / API])
+if test "$enable_pyecell" = "yes"; then
+  AC_MSG_RESULT([yes])
+else
+  AC_MSG_RESULT([no])
+fi
+
+AM_CONDITIONAL([ENABLE_PYECELL], [test "$enable_pyecell" = "yes"])
 dnl
 
 dnl Checks for programs.
@@ -121,7 +133,11 @@ fi
 
 
 
-AM_PATH_PYTHON(2.2)
+if test "$enable_pyecell" = "yes"; then
+  AM_PATH_PYTHON(2.2)
+else
+  PYTHON=echo
+fi
 AC_SUBST(PYTHON)
 
 AC_LANG([C++])
@@ -138,19 +154,20 @@ AC_SUBST(LIBC)
 dnl
 
 ECELL_CHECK_GSL
-AM_CHECK_PYMOD(numpy,,,[AC_MSG_ERROR([could not find Python numpy module])])
-AM_CHECK_PYMOD(xml,,,[AC_MSG_ERROR([could not find Python xml module])])
-AM_CHECK_PYMOD(ply,,,[AC_MSG_ERROR([could not find Python ply module])])
+if test "$enable_pyecell" = "yes"; then
+  AM_CHECK_PYMOD(numpy,,,[AC_MSG_ERROR([could not find Python numpy module])])
+  AM_CHECK_PYMOD(xml,,,[AC_MSG_ERROR([could not find Python xml module])])
+  AM_CHECK_PYMOD(ply,,,[AC_MSG_ERROR([could not find Python ply module])])
 
-if test "$enable_gui" = 'yes'; then
-   AM_CHECK_PYMOD(pygtk,,,[AC_MSG_ERROR([could not find Python pygtk module])])
-   AM_CHECK_PYMOD(gtk,,,[AC_MSG_ERROR([could not find Python gtk module])])
-   AM_CHECK_PYMOD(gtk.gdk,,,
-                [AC_MSG_ERROR([could not find Python gtk.gdk module])])
-   AM_CHECK_PYMOD(gnomecanvas,,,[AC_MSG_WARN(could not find gnomecanvas module. model-editor will not work. )])
-   AM_CHECK_PYMOD(xml.dom.minidom,,,[AC_MSG_WARN(could not find xml.dom.minidom module. model-editor will not work.)])
+  if test "$enable_gui" = 'yes'; then
+    AM_CHECK_PYMOD(pygtk,,,[AC_MSG_ERROR([could not find Python pygtk module])])
+    AM_CHECK_PYMOD(gtk,,,[AC_MSG_ERROR([could not find Python gtk module])])
+    AM_CHECK_PYMOD(gtk.gdk,,,
+                   [AC_MSG_ERROR([could not find Python gtk.gdk module])])
+    AM_CHECK_PYMOD(gnomecanvas,,,[AC_MSG_WARN(could not find gnomecanvas module. model-editor will not work. )])
+    AM_CHECK_PYMOD(xml.dom.minidom,,,[AC_MSG_WARN(could not find xml.dom.minidom module. model-editor will not work.)])
+  fi
 fi
-
 
 dnl Checks for header files.
 
@@ -217,16 +234,30 @@ fi
 AC_SUBST(DMTOOL_DIR)
 AC_SUBST(DMTOOL_INCLUDE_DIR)
 
-AM_CHECK_PYTHON_HEADERS(,[AC_MSG_ERROR([Failed to find Python headers.])])
-ECELL_CHECK_PYTHON_LIBS
-AM_CONDITIONAL([HAVE_PYTHON_LIB], [test ! -z "$PYTHON_LIBS"])
-AC_SUBST([PYTHON_LIBS])
-
 ECELL_CHECK_BOOST(, [AC_MSG_ERROR([could not find Boost C++ library])])
-ECELL_CHECK_BOOST_PYTHON(, [AC_MSG_ERROR([could not find Boost.Python library])])
 
 USE_COMPILER_EXTENSIONS=no
 AC_MSG_CHECKING( if use of compiler specific features are allowed )
+
+if test "$enable_pyecell" = "yes"; then
+  AM_CHECK_PYTHON_HEADERS(,[AC_MSG_ERROR([Failed to find Python headers.])])
+  ECELL_CHECK_PYTHON_LIBS
+  BOOST_PYTHON_LIBNAME=boost_python
+  AC_ARG_WITH(boost-python-libname,
+    AC_HELP_STRING([--with-boost-python-libname=LIBNAME],
+                   [specify the library name of Boost.Python [[boost_python]]]
+                  ),
+    [BOOST_PYTHON_LIBNAME=$withval]
+  )
+  ECELL_BOOST_PYTHON_LIBNAME
+  ECELL_CHECK_BOOST_PYTHON(, [AC_MSG_ERROR([could not find Boost.Python library])])
+else
+  BOOST_PYTHON_LIBNAME=
+fi
+AC_SUBST(BOOST_PYTHON_LIBNAME)
+
+AM_CONDITIONAL([HAVE_PYTHON_LIB], [test ! -z "$PYTHON_LIBS"])
+AC_SUBST([PYTHON_LIBS])
 
 AC_ARG_ENABLE( compiler-extensions,,
                USE_COMPILER_EXTENSIONS=yes,
